--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "antd": "^5.14.2",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "html-react-parser": "^3.0.9",
